tests/negative/gold/final-loop-variable3-test.gold
tests/negative/final-loop-variable3-test.toit:21:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/final-loop-variable3-test.toit:10:15: error: Can't assign to final local
    gee:: foo = 42
              ^
tests/negative/final-loop-variable3-test.toit:12:33: error: Can't assign to final local
  for x ::= 42; x < 10; (gee:: x++):
                                ^~
tests/negative/final-loop-variable3-test.toit:15:25: error: Can't assign to final local
  for x ::= 42; (gee ::x++) < 10; (gee x++):
                        ^~
tests/negative/final-loop-variable3-test.toit:15:41: error: Can't assign to final local
  for x ::= 42; (gee ::x++) < 10; (gee x++):
                                        ^~
tests/negative/final-loop-variable3-test.toit:19:12: error: Can't assign to final local
    gee:: x++
           ^~
Compilation failed
